src/test/resources/Parser/SyntaxErrors/InvalidSignatureRemoteFunctionDeclaration.front
class A:

    static open op<T>(t: T);

class B:
    static A.op(a: A) {}